--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <head>
+    <script src="js/jquery.min.js"></script>
+    <script src="js/jquery.autocomplete.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-    <script src="js/Chart.bundle.js"></script>
-    <script src="js/Chart.bundle.min.js"></script>
-    <script src="js/custom.js"></script>
-    <script src="js/dataTables.bootstrap4.min.js"></script>
-    <script src="js/daterangepicker.js"></script>
-    <script src="js/index.js"></script>
-    <script src="js/jquery-ui.js"></script>
-    <script src="js/jquery.dataTables.min.js"></script>
     <script src="js/jquery.nicescroll.min.js"></script>
     <script src="js/moment.min.js"></script>
-    <script src="js/scripts.js"></script>
-    <script src="js/select2.full.min.js"></script>
     <script src="js/stisla.js"></script>
+    <script src="js/jquery.dataTables.min.js"></script>
+    <script src="js/dataTables.bootstrap4.min.js"></script>
+    <script src="js/index.js"></script>
+    <script src="js/daterangepicker.js"></script>
+    <script src="js/scripts.js"></script>
+    <script src="js/custom.js"></script>
+    <script src="js/Chart.bundle.js"></script>
+    <script src="js/Chart.bundle.min.js"></script>
+    <script src="js/jquery-ui.js"></script>
+    <script src="js/select2.full.min.js"></script>
 </head>
