--- a/index.html
+++ b/index.html
@@ -1,4 +1,14 @@
 <head>
+
+    <link rel="stylesheet" href="css/all.min.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/components.css">
+    <link rel="stylesheet" href="css/dataTables.bootstrap4.min.css">
+    <link rel="stylesheet" href="css/daterangepicker.css">
+    <link rel="stylesheet" href="css/jquery-ui.css">
+    <link rel="stylesheet" href="css/select2.min.css">
+    <link rel="stylesheet" href="css/style.css">
+
     <script src="js/jquery.min.js"></script>
     <script src="js/jquery.autocomplete.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
